# Concordo

./: CMakeLists.txt  Doxyfile  README.md  readme.md  script.txt  text  textwriter.cpp
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake  program  script.txt  scriptValid.txt
docs/html/: annotated.html  channel_8cpp.html  channel_8cpp__incl.map  channel_8cpp__incl.md5  channel_8h.html  channel_8h__dep__incl.map  channel_8h__dep__incl.md5  channel_8h__incl.map  channel_8h__incl.md5  channel_8h_source.html  classChannel-members.html  classChannel.html  classChannel__coll__graph.map  classChannel__coll__graph.md5  classChannel__inherit__graph.map  classChannel__inherit__graph.md5  classChannel_a53361b01056aea15c93053feb470b715_icgraph.map  classChannel_a53361b01056aea15c93053feb470b715_icgraph.md5  classChannel_aa02beb03719cc63c5985c4b2399362de_icgraph.map  classChannel_aa02beb03719cc63c5985c4b2399362de_icgraph.md5  classChannel_afa00934e2d4d1f3e15f6f984b941fcc3_icgraph.map  classChannel_afa00934e2d4d1f3e15f6f984b941fcc3_icgraph.md5  classMessage-members.html  classMessage.html  classMessage__coll__graph.map  classMessage_a3d4ceea44b0922802d6ae99063ac4e48_icgraph.map  classMessage_a3d4ceea44b0922802d6ae99063ac4e48_icgraph.md5  classMessage_a3ea66a4fb4757732df72787f01f8ec78_icgraph.map  classMessage_a3ea66a4fb4757732df72787f01f8ec78_icgraph.md5  classServer.html  (+187 more)
include/: channel.h  message.h  server.h  system.h  textchannel.h  user.h  voicechannel.h
src/: channel.cpp  main.cpp  message.cpp  server.cpp  system.cpp  textchannel.cpp  user.cpp  voicechannel.cpp
(+152 files in other folders)
